src/style/style.scss
@use 'variables.scss' as v;

// @font-face {
//     font-family: 'Kanit', sans-serif;
//     src: url(../assets/fonts/Kanit-Regular.ttf);
// }

* {
  // border: 1px solid rgba(255, 0, 0, 0.349);
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Kanit', sans-serif;
  font-smooth: always;
  -webkit-font-smoothing: auto;
  -moz-osx-font-smoothing: auto;
  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
  transition: background-color 0.3s ease, color 0.3s ease;
}

body {
  background: rgb(255, 214, 225);
  background: -moz-radial-gradient(circle, rgba(255, 214, 225, 1) 18%, rgba(255, 180, 201, 1) 100%);
  background: -webkit-radial-gradient(
    circle,
    rgba(255, 214, 225, 1) 18%,
    rgba(255, 180, 201, 1) 100%
  );
  background: radial-gradient(circle, rgba(255, 214, 225, 1) 18%, rgba(255, 180, 201, 1) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffd6e1",endColorstr="#ffb4c9",GradientType=1);
  background-repeat: no-repeat;
  min-height: 100vh;
}

.page {
  // max-width: 900px;
  // margin: 0 auto;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  top: 50px;
  overflow-y: auto;
  @include v.flex(row, center, flex-start);
  mask-image: linear-gradient(180deg, rgba(0, 0, 0, 1) 70%, rgba(0, 0, 0, 0) 100%);
  mask-image: linear-gradient(180deg, rgba(0, 0, 0, 1) 100%, rgba(0, 0, 0, 1) 100%);
  transition: mask-image 0.3s ease;
}

.wrapper {
  max-width: 900px;
}

